# Advanced_Topics_2020b_Ex2

./: CMakeLists.txt
Algorithm/: AlgorithmsBaseClass.cpp  AlgorithmsBaseClass.h  _308394642_a.cpp  _308394642_a.h  _308394642_b.cpp  _308394642_b.h  makefile
Common/: Container.h  Errors.h  Parser.cpp  Parser.h  Port.cpp  Port.h  ShipPlan.cpp  ShipPlan.h  ShipRoute.cpp  ShipRoute.h  Travel.cpp  Travel.h  WeightBalanceCalculator.cpp
Interfaces/: AlgorithmRegistration.h  ErrorsInterface.h
Simulator/: Registrar.cpp  Registrar.h  Simulation.cpp  Simulation.h  delete.cpp  main.cpp  makefile
Simulator/Travel1/: .ship_plan.txt  IL ASH_1.cargo_data.txt  IL HAI_1.cargo_data.txt  ILASH_1.cargo_data  ILHAI_1.cargo_data  Route.txt  travel.route  travel.ship_plan
Simulator/Travel2/: IL ASH_1.cargo_data.txt  ILASH_1.cargo_data  Route.txt  US NYC_1.cargo_data.txt  USNYC_1.cargo_data  travel.route  travel.ship_plan.txt
